fix missing background in firefox for homepage

--- a/app/stylesheets/redesign.scss
+++ b/app/stylesheets/redesign.scss
@@ -47,6 +47,7 @@ body{
     }
   }
 }
+
 #content{
   width:100%;
   
@@ -54,7 +55,7 @@ body{
   #header{
     height:320px;
     padding-top:35px;
-    background: url('/images/green-background.png') repeat no-repeat center top;
+    background: url('/images/green-background.png') repeat-x center top;
     border-bottom: 1px solid #698e23;
     
     
